jdk-8 merging